fix: hyphen breaks in error messages (#2735)
OKTA-516346 fix: error infobox hyphens (css)

--- a/assets/sass/common/admin/modules/infobox/_infobox.scss
+++ b/assets/sass/common/admin/modules/infobox/_infobox.scss
@@ -9,7 +9,7 @@
 
 .infobox {
   word-break: break-word;
-  hyphens: auto;
+  hyphens: none;
   position: relative;
   min-height: 18px; // prevents vertical jitter if content is generated by JS
   padding: 12px 18px 12px 48px !important; // important used to override common use of infobox for confirmation dialogs
